# open_housing

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  test.http
.github/workflows/: docker-image.yml
entities/: Cargo.toml
entities/src/: lib.rs  mod.rs  permission.rs  prelude.rs  room_booking.rs  roomphotos.rs  user.rs  user_permission.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  test.html  test.http  vite.config.ts
frontend/src/: app.css  hooks.server.js
frontend/src/lib/: Constants.ts
frontend/src/lib/components/: AddBooking.svelte  AddRoom.svelte  BookingElement.svelte  Bookings.svelte  CheckedInButton.svelte  DeleteButton.svelte  EditButton.svelte  Error.svelte  Footer.svelte  LoginPage.svelte  Navbar.svelte
frontend/src/lib/helper/: GetDifference.ts
frontend/src/lib/objects/: Booking.ts  Response.ts  Room.ts
frontend/src/lib/types/: APIResponse.ts  Booking.ts  Response.ts  Room.ts
frontend/src/routes/: +layout.svelte  +page.svelte
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250810_140040_auth.rs  m20250817_121048_add_user_roles.rs
src/: auth_handler.rs  booking.rs  booking_handler.rs  calendar.rs  main.rs  overview.rs  room.rs  room_handler.rs  templates.rs  user_handler.rs
src/common/: date.rs  datetime.rs  db.rs  env.rs  mod.rs  time.rs
src/data_objects/: booking.rs  mod.rs
src/data_objects/database/: booking.rs  mod.rs  room.rs  roomphotos.rs
src/data_objects/db/: booking.rs  overview.rs  prelude.rs  room.rs  room_booking.rs
src/data_objects/request/: mod.rs  new_booking.rs  room.rs
src/data_objects/response/: mod.rs
test/: Add Room.bru  Bookings.bru  Room is free.bru  Room.bru  add booking.bru  arrival.bru  burni.bru  collection.bru  get_overview.bru
test/auth/: Login.bru  logout.bru
test/booking/: Booking info.bru  Bookings.bru  DEL Booking.bru  Delete Booking.bru  Update Booking.bru  add booking.bru  folder.bru
test/room/: Add Room.bru  DEL Room.bru  Delte Room.bru  Room info.bru  Room is free.bru  Room.bru  Rooms.bru  Update Room.bru  folder.bru
test/user/: Add User.bru
(+30 files in other folders)
