[package]
name = "open_housing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
sea-orm = {version ="1.1.14", features = ["sqlx-postgres", "with-chrono", "with-json"]}
sea-query = "0.32.6"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version="0.8.6", features = ["runtime-tokio", "postgres", "sqlx-postgres", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

