[package]
name = "open_housing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
sea-orm = {version ="1.1.14", features = ["sqlx-postgres", "with-chrono", "with-json"]}
sea-query = "0.32.6"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version="0.8.6", features = ["runtime-tokio", "postgres", "sqlx-postgres", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower-sessions = { version="0.14.0", features = ["signed", "tower-sessions-memory-store"] }
axum-login = { version = "0.18.0" }
tower-sessions-seaorm-store = { version = "0.1.1", features = ["postgres", "sea-orm-migration"] }
axum_session = "0.16.0"
axum_session_auth = "0.16.0"
axum_session_sqlx = "0.5.0"
bcrypt = "0.17.0"

entities = { path="./entities" }
migration = { path="./migration" }

[workspace]
members = ["migration", "entities"]
